applications/openlookeng-tryme/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-tryme
  name: openlookeng-tryme
