applications/openlookeng-tryme/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: openlookeng-tryme-ingress
spec:
  tls:
    - hosts:
        - tryme.openlookeng.io
      secretName: openlookeng-tryme-tls
  rules:
    - host: tryme.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-tryme-internal
              servicePort: 80
            path: /
